--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -29,5 +29,10 @@
         font-weight: 500;
       }
     }
+    &-link-block {
+      text-align: right;
+      margin-bottom: 30px;
+      font-weight: 500;
+    }
   }
 }
